<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gris"
        android:orientation="vertical"
        android:padding="5dp"
        android:textAlignment="center"
        tools:context=".ui.Producto.UpdateProducto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="5dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="280dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <Button
                android:id="@+id/bt_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/azul_claro"
                android:text="@string/Agregar_imagen"
                android:visibility="gone"
                app:cornerRadius="5dp"
                app:icon="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titulo_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/txt_NombreProd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/etNombreProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txt_NombreProd"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/titulo_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/txt_PrecioProd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/etPrecioProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:ems="10"
            android:hint="@string/txt_PrecioProd"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/titulo_colores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/txt_ColoresProd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/etColoresProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txt_ColoresProd"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/titulo_talla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/txt_TallasProd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginVertical="2dp">

            <EditText
                android:id="@+id/etTallasProd"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="2dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/talla_cardCarrito"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toTopOf="@+id/RecicladorTallas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_agregar_talla"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="@color/azul_claro"
                android:text="@string/bt_agregar"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@+id/RecicladorTallas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/etTallasProd"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecicladorTallas"
                android:layout_width="0dp"
                android:layout_height="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btUpdateProducto"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/azul_claro"
            android:text="@string/bt_update_producto"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_baseline_save_24"
            app:iconGravity="textStart" />

        <Button
            android:id="@+id/btDeleteProducto"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/rojo"
            android:text="@string/bt_delete_producto"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconGravity="textStart" />
    </LinearLayout>
    </ScrollView>


